testsuite/tests/linear/should_fail/LinearIf.stderr

LinearIf.hs:13:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘b’
    • In an equation for ‘f’: f b x y = if b then x else y

LinearIf.hs:13:5: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In an equation for ‘f’: f b x y = if b then x else y

LinearIf.hs:13:7: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘y’
    • In an equation for ‘f’: f b x y = if b then x else y
